--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,84 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+:root {
+
+  --clr-marine-blue: hsl(213, 96%, 18%);
+  --clr-purpleish-blue: hsl(243, 100%, 62%);
+  --clr-pastel-blue: hsl(228, 100%, 84%);
+  --clr-light-blue: hsl(206, 94%, 87%);
+  --clr-strawberry-red: hsl(354, 84%, 57%);
+
+
+  --clr-cool-grey: hsl(231, 11%, 63%);
+  --clr-light-grey: hsl(229, 24%, 87%);
+  --clr-magnolia: hsl(217, 100%, 97%);
+  --clr-alabaster: hsl(231, 100%, 99%);
+  --clr-white: hsl(0, 0%, 100%);
+  
+
+  --ff-base: 'Ubuntu', sans-serif;
+
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-bold: 700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/*
+    1. Use a more-intuitive box-sizing model.
+    */
+    *, *::before, *::after {
+      box-sizing: border-box;
+      }
+      /*
+      2. Remove default margin
+      */
+      * {
+      margin: 0;
+      }
+      /*
+      3. Allow percentage-based heights in the application
+      */
+      html, body {
+      height: 100%;
+      }
+      /*
+      Typographic tweaks!
+      4. Add accessible line-height
+      5. Improve text rendering
+      */
+      body {
+      line-height: 1.5;
+      -webkit-font-smoothing: antialiased;
+      }
+      /*
+      6. Improve media defaults
+      */
+      img, picture, video, canvas, svg {
+      display: block;
+      max-width: 100%;
+      }
+      /*
+      7. Remove built-in form typography styles
+      */
+      input, button, textarea, select {
+      font: inherit;
+      }
+      /*
+      8. Avoid text overflows
+      */
+      p, h1, h2, h3, h4, h5, h6 {
+      overflow-wrap: break-word;
+      }
+      /*
+      9. Create a root stacking context
+      */
+      #root, #__next {
+      isolation: isolate;
+      }
+  
+
+
+body {
+  font-family: var(--ff-base);
+  font-weight: var(--fw-regular);
 }
