--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --fw-regular: 400;
   --fw-medium: 500;
   --fw-bold: 700;
+
 }
 
 
@@ -81,4 +82,16 @@
 body {
   font-family: var(--ff-base);
   font-weight: var(--fw-regular);
+
+  background-color: var(--clr-alabaster);
+  background-image: url('/Users/clairegill/Desktop/multi-step-form/src/assets/bg-sidebar-mobile.svg');
+  background-repeat: no-repeat;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+
 }
