--- a/src/components/Steps.module.css
+++ b/src/components/Steps.module.css
@@ -1,14 +1,20 @@
 
 .steps{
     display: flex;
-    height: 120px
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    gap: 1rem;
 }
 
 .step{
+    display: flex;
+    justify-content: center;
     border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    background-color: brown;
-    color: pink;
-
+    height: 30px;
+    width: 30px;
+    border: 1px solid var(--clr-white);
+    color: var(--clr-white);
+    font-weight: var(--fw-bold);
 }
+
