--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -5,3 +5,11 @@
     padding: 1rem;
     margin: 0 1rem;
 }
+
+.outline {
+    border: 1px solid var(--clr-light-grey);
+}
+
+.selected {
+    background-color: var(--clr-light-grey);
+}
