all data and thank you step and step indicator

--- a/src/components/Steps.module.css
+++ b/src/components/Steps.module.css
@@ -18,3 +18,9 @@
     font-weight: var(--fw-bold);
 }
 
+
+.selected {
+    background-color: var(--clr-light-blue);
+    color: var(--clr-marine-blue);
+}
+
