--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,9 +1,13 @@
 
 .card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background-color: var(--clr-white);
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 1.5rem;
     margin: 0 1rem;
+    max-width: 600px;
 }
 
 .outline {
@@ -12,4 +16,8 @@
 
 .selected {
     background-color: var(--clr-light-grey);
+}
+
+.dropShadow {
+    filter: drop-shadow(0px 1px 35px rgb(170, 169, 169));
 }
