--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -4,10 +4,15 @@
     flex-direction: column;
     gap: 1rem;
     background-color: var(--clr-white);
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     padding: 1.5rem;
     margin: 0 1rem;
     max-width: 600px;
+}
+
+.clickable {
+    margin: 0.75rem 0.25rem;
+    padding: 0.75rem;
 }
 
 .outline {
@@ -15,7 +20,8 @@
 }
 
 .selected {
-    background-color: var(--clr-light-grey);
+    background-color: var(--clr-alabaster);
+    border: 1px solid var(--clr-purpleish-blue);
 }
 
 .dropShadow {
