--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -15,6 +15,11 @@
     padding: 0.75rem;
 }
 
+.addOn {
+    margin: 0.75rem 0;
+    padding: 0.75rem;
+}
+
 .outline {
     border: 1px solid var(--clr-light-grey);
 }
