--- a/src/components/AddOnItem.module.css
+++ b/src/components/AddOnItem.module.css
@@ -11,7 +11,16 @@
     font-weight: var(--fw-bold);
 }
 
-.addOnSelected {
-    border: 1px;
-    border-color: crimson;
+.price{
+    color: var(--clr-purpleish-blue);
+}
+
+.itemSpacing {
+    justify-content: space-between;
+}
+
+.checkBoxGroup {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
