--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -2,13 +2,16 @@
 .card {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    
     background-color: var(--clr-white);
     border-radius: 0.5rem;
     padding: 1.5rem;
     margin: 0 1rem;
-    max-width: 600px;
+    /* max-width: 600px; */
 }
+
+
+
 
 .clickable {
     margin: 0.75rem 0.25rem;
@@ -32,3 +35,5 @@
 .dropShadow {
     filter: drop-shadow(0px 1px 35px rgb(170, 169, 169));
 }
+
+
