steps desktop layout

--- a/src/components/Steps.module.css
+++ b/src/components/Steps.module.css
@@ -2,25 +2,66 @@
 .steps{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: flex-start; */
     height: 100px;
     gap: 1rem;
 }
 
-.step{
+.stepGroup  {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.stepGroup  p{
+    font-size: 0.8rem;
+}
+
+.stepGroup  h2{
+    font-size: 0.8rem;
+    color: var(--clr-white);
+}
+
+.stepText{
+    display: none;
+    flex-direction: column;
+}
+
+.step {
     display: flex;
     justify-content: center;
     border-radius: 50%;
-    height: 30px;
+    min-height: 30px;
     width: 30px;
     border: 1px solid var(--clr-white);
     color: var(--clr-white);
     font-weight: var(--fw-bold);
 }
 
+ 
+
 
 .selected {
     background-color: var(--clr-light-blue);
     color: var(--clr-marine-blue);
+}
+
+
+@media (min-width: 900px){
+
+   .steps{
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    top: 200px;
+    right: 95px;
+    height: none;  
+   }
+
+   .stepText{
+    display: flex;
+    }
+
+   
 }
 
