--- a/src/components/PlanItem.module.css
+++ b/src/components/PlanItem.module.css
@@ -3,3 +3,15 @@
     
 }
 
+.planItem {
+    display: flex;
+    gap: 1rem;
+}
+
+
+@media (min-width: 900px){
+    .planItem {
+        flex-direction: column;
+        gap: 2.5rem;
+    }
+}
