--- a/src/components/SelectPlanForm.module.css
+++ b/src/components/SelectPlanForm.module.css
@@ -6,8 +6,28 @@
     position: fixed;
     width: 100vw;
     bottom: 0%;
+    right: 0%;
     background-color: var(--clr-white);
     padding: 1rem;
+}
+
+
+
+.stepsNav {
+    display: none;
+
+    background-image: url('/Users/clairegill/Desktop/multi-step-form/src/assets/bg-sidebar-desktop.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 0.5rem;
+    /* overflow: hidden; */
+}
+
+
+.planListData {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .switchCard {
@@ -21,4 +41,32 @@
 .switchCard h2 {
     font-size: 0.90rem;
     font-weight: var(--fw-medium);
+}
+
+
+@media (min-width: 900px){
+
+    .planListData {
+        min-width: 443px;
+        margin: 65px;
+    }
+ .selectPlan {
+     display: flex;
+     
+ }
+
+ .stepsNav {
+     display: flex;
+     min-height: 568px;
+     min-width: 274px;
+ }
+
+ .navBar{
+    position: relative;
+    width: 443px;
+    bottom: 65px;
+    left: 380px;
+    
+    padding: 0;
+}
 }
