thank you page styling

--- a/src/components/FinishUp.module.css
+++ b/src/components/FinishUp.module.css
@@ -40,6 +40,23 @@
 }
 
 
+.finishUpData {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    /* min-width: 500px; */
+}
+
+.stepsNav {
+    display: none;
+
+    background-image: url('/Users/clairegill/Desktop/multi-step-form/src/assets/bg-sidebar-desktop.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 0.5rem;
+}
+
+
 .navBar{
     display: flex;
     justify-content: flex-end;
@@ -47,6 +64,36 @@
     position: fixed;
     width: 100vw;
     bottom: 0%;
+    right: 0%;
     background-color: var(--clr-white);
     padding: 1rem;
+}
+
+
+
+@media (min-width: 900px){
+
+    .finishUpData {
+        min-width: 443px;
+        margin: 65px;
+    }
+ .finishUp {
+     display: flex;
+     
+ }
+
+ .stepsNav {
+     display: flex;
+     min-height: 568px;
+     min-width: 274px;
+ }
+
+ .navBar{
+    position: relative;
+    width: 443px;
+    bottom: 65px;
+    left: 380px;
+    
+    padding: 0;
+}
 }
