--- a/src/components/ThankYou.module.css
+++ b/src/components/ThankYou.module.css
@@ -1,8 +1,3 @@
-.thankYou {
-    
-}
-
-
 
 .thankYouData {
     display: flex;
@@ -10,7 +5,6 @@
     align-items: center;
     text-align: center;
     gap: 1rem;
-    padding: 3rem 0;
 }
 
 
@@ -33,7 +27,7 @@
     }
  .thankYou {
      display: flex;
-     
+     align-items: center;
  }
 
  .stepsNav {
