error warning added

--- a/src/components/PersonalInfoForm.module.css
+++ b/src/components/PersonalInfoForm.module.css
@@ -33,9 +33,12 @@
 
 .error{
     color: var(--clr-strawberry-red);
-    position: relative;
-    top: 18px;
-    left: 328px;
+   
+}
+
+.spaceBetween {
+    
+    justify-content: space-between;
 }
 
 @media (min-width: 900px){
